--- a/yolosh.html
+++ b/yolosh.html
@@ -3,12 +3,54 @@
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+
+<h1>Todo List ({{incompleteCount}})</h1>
 
   {{> hello}}
+  <label class="hide-completed">
+      <input type="checkbox" checked="{{hideCompleted}}" />
+      Hide Completed Tasks
+  </label>
+{{> loginButtons}}
+  <!-- add a form below the h1 -->
+<span class="text"><strong>{{username}}</strong> - {{text}}</span>
+{{#if currentUser}}
+    <form class="new-task">
+        <input type="text" name="text" placeholder="Type to add new tasks" />
+    </form>
+{{/if}}
+
+<!-- add right below the code for the checkbox in the task template -->
+{{#if isOwner}}
+    <button class="toggle-private">
+        {{#if private}}
+            Private
+        {{else}}
+            Public
+        {{/if}}
+    </button>
+{{/if}}
+
+  <ul>
+      {{#each tasks}}
+          {{> task}}
+      {{/each}}
+  </ul>
+
 </body>
 
 <template name="hello">
   <button>Click Me</button>
   <p>You've pressed the button {{counter}} times.</p>
+</template>
+
+
+<template name="task">
+    <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
+        <button class="delete">&times;</button>
+
+        <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+
+        <span class="text">{{text}}</span>
+    </li>
 </template>
