--- a/client/collection/index.html
+++ b/client/collection/index.html
@@ -1,5 +1,3 @@
-<h5>List Collection</h5>
-
-<template name="listCollection">
-    <p>Collection Name: {{name}}</p>
+<template name="Collections">
+    <p>Home Page</p>
 </template>
