--- a/client/collection/templates.html
+++ b/client/collection/templates.html
@@ -1,4 +1,4 @@
-<template name="collections">
+<template name="Collections">
     <div class="fixed-action-btn" style="top: 40px; right: 24px;">
         <a class="btn-floating btn-large waves-effect waves-light red"><i class="mdi-content-add"></i></a>
     </div>
