--- a/client/collection/templates.html
+++ b/client/collection/templates.html
@@ -2,16 +2,12 @@
     <div class="fixed-action-btn" style="top: 40px; right: 24px;">
         <a class="btn-floating btn-large waves-effect waves-light red"><i class="mdi-content-add"></i></a>
     </div>
-    
 
 
-    <div class="row">
-      <ul>
-        {{#each ngas}}
-        <li>{{text}}</li>
-        {{/each}}
-      </ul>
-    </div>
+    {{# each collections }}
+        {{> collection }}
+    {{/ each }}
+
 
 </template>
 
@@ -21,19 +17,34 @@
 
 </template>
 
-<template name="collectionCard">
-    <div class="col s6 m4 l3">
+<template name="collection">
+
         <div class="card">
-            <div class="card-image">
-                <img src="{{img}}">
+            <div class="card-image waves-effect waves-block waves-light">
+                <img class="activator" src="/images/sample-1.jpg">
             </div>
             <div class="card-content">
-                <h6>{{name}}</h6>
+                <span class="card-title activator grey-text text-darken-4">{{title}}
+                    <i class="mdi-navigation-more-vert right"></i></span>
+
+                <p><a href="#">This is a link</a></p>
             </div>
-            <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href='#'>This is a link</a>
+            <div class="card-reveal">
+                <span class="card-title grey-text text-darken-4">{{title}} <i
+                        class="mdi-navigation-close right"></i></span>
+
+                <p>Here is some more information about this product that is only revealed once clicked on.</p>
             </div>
         </div>
-    </div>
+
+</template>
+
+<template name="CollectionsLeft">
+
+    <ul class="collection">
+    {{#each collections}}
+        <li class="collection-item dismissable"><div>{{title}}</div></li>
+    {{/each}}
+    </ul>
+
 </template>
